--- a/src/components/ProxyControl.module.css
+++ b/src/components/ProxyControl.module.css
@@ -2,6 +2,7 @@
 
 .proxyControl {
   position: relative;
+  display: inline-flex;
 }
 
 .proxyButton {
